@@ -1074,14 +1074,15 @@ static const OptionInfo
     { "Plus", (long) PlusKernel, MagickFalse },
     { "Cross", (long) CrossKernel, MagickFalse },
     { "Ring", (long) RingKernel, MagickFalse },
-    { "Peaks", (long) PeaksKernel,MagickFalse },
-    { "Edges", (long) EdgesKernel,MagickFalse },
-    { "Corners", (long) CornersKernel,MagickFalse },
-    { "Ridges", (long) RidgesKernel,MagickFalse },
-    { "LineEnds", (long) LineEndsKernel,MagickFalse },
-    { "LineJunctions", (long) LineJunctionsKernel,MagickFalse },
-    { "ConvexHull", (long) ConvexHullKernel,MagickFalse },
-    { "Skeleton", (long) SkeletonKernel,MagickFalse },
+    { "Peaks", (long) PeaksKernel, MagickFalse },
+    { "Edges", (long) EdgesKernel, MagickFalse },
+    { "Corners", (long) CornersKernel, MagickFalse },
+    { "Ridges", (long) RidgesKernel, MagickFalse },
+    { "Ridges2", (long) RidgesKernel, MagickFalse },
+    { "LineEnds", (long) LineEndsKernel, MagickFalse },
+    { "LineJunctions", (long) LineJunctionsKernel, MagickFalse },
+    { "ConvexHull", (long) ConvexHullKernel, MagickFalse },
+    { "Skeleton", (long) SkeletonKernel, MagickFalse },
     { "Chebyshev", (long) ChebyshevKernel, MagickFalse },
     { "Manhatten", (long) ManhattenKernel, MagickFalse },
     { "Euclidean", (long) EuclideanKernel, MagickFalse },
